[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyhcl2"
version = "1.0.0"
description = ""
authors = ["RISQ Capital <dev@risqcapital.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyhcl2", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/risqcapital/pyhcl2/issues"
Repository = "https://github.com/risqcapital/pyhcl2"

[tool.poetry.dependencies]
python = ">= 3.11, < 4"
termcolor = "^2.4.0"
lark = "^1.1.9"
networkx = "^3.3"
pydantic = "^2.9.2"
rich = "^13.9.2"
prompt-toolkit = ">=2.0.1,<3.0.0"
pyagnostics = ">=2.0.0, <3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "*"
types-dataclasses = "^0.6.5"
types-termcolor = "^1.1.4"
mypy = "^1.10.0"

[tool.poetry.scripts]
pyhcl2 = "pyhcl2.repl:main"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "W",  # pyflakes warnings
    "I", # isort
    "N", # pep8 naming
    "UP", # pyupgrade
    "ANN", # flake8 annotations
    "ERA", # eradicate
    "PL", # pylint
    "TRY", # tryceratops
    "RUF", # ruf,
    "FA102" # future-required-type-annotation
]

extend-ignore=[
    "ANN101",
    "ERA001",
    "TRY003",
    "PLR2004"
]

[tool.mypy]
plugins = ["pydantic.mypy"]