[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyhcl2"
version = "2.0.0"
description = ""
authors = ["RISQ Capital <dev@risqcapital.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyhcl2", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/risqcapital/pyhcl2/issues"
Repository = "https://github.com/risqcapital/pyhcl2"

[tool.poetry.dependencies]
python = ">= 3.11, < 4, !=3.14.1"
termcolor = "^3.3.0"
lark = "^1.3.1"
networkx = "^3.6.1"
pydantic = "^2.12.5"
rich = "^14.2.0"
prompt-toolkit = { version = ">=2.0.1,<4.0.0", optional = true }
pyagnostics = "^3.0.0"

[tool.poetry.extras]
repl = ["prompt-toolkit"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "*"
types-dataclasses = "^0.6.5"
types-termcolor = "^1.1.4"
mypy = "^1.10.0"
types-networkx = "^3.6.1.20240319"

[tool.poetry.scripts]
pyhcl2 = "pyhcl2.repl:main"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "W",  # pyflakes warnings
    "I", # isort
    "N", # pep8 naming
    "UP", # pyupgrade
    "ANN", # flake8 annotations
    "ERA", # eradicate
    "PL", # pylint
    "TRY", # tryceratops
    "RUF", # ruf,
    "FA102" # future-required-type-annotation
]

extend-ignore=[
    "ERA001",
    "TRY003",
    "PLR2004"
]

[tool.mypy]
plugins = ["pydantic.mypy"]
